[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Git URL parser"
edition = "2021"
homepage = "https://github.com/rcook/joat-git-url-rs"
keywords = ["general"]
license = "MIT"
name = "joat-git-url"
repository = "https://github.com/rcook/joat-git-url-rs"
version = "0.0.4"

[dependencies]
